# amrTerrain

./: .gitignore  README.md  developpement.md  pyproject.toml  ruff.toml
notebooks/: 13_austrian_alps.ipynb  99_fringe_test.ipynb
src/amr_terrain/: SRTM_to_STL_example.py  amr1DSolver.py  amrex_particle.py  backendInterface.py  cli.py  terrain.py
src/amr_terrain/example_scripts/: saveTurbines.py  stitchtif.py  windmap.py
src/backend/: SRTM_to_STL_example.py  amr1DSolver.py  backendInterface.py
tutorials/10_whitemountains_noprecursor_rans_neutral/: 1dSolverOutput.info
tutorials/10_whitemountains_noprecursor_rans_neutral/terrain/: metmast.info  rans_1d.info  terrain.inp
tutorials/11_whitemountains_noprecursor_rans_veryunstable/: 1dSolverOutput.info
tutorials/11_whitemountains_noprecursor_rans_veryunstable/terrain/: metmast.info  rans_1d.info  terrain.inp
tutorials/12_whitemountains_noprecursor_rans_verystable/: 1dSolverOutput.info  utm.info
tutorials/12_whitemountains_noprecursor_rans_verystable/terrain/: metmast.info  rans_1d.info  (+1 more)
yaml_files/: 10_whitemountains_noprecursor_rans_neutral.yaml  11_whitemountains_noprecursor_rans_veryunstable.yaml  12_whitemountains_noprecursor_rans_verystable.yaml  13_austrian_alps.yaml  13b_austrian_alps_stl.yaml  1_precursor_rans.yaml  2_precursor_les.yaml  3_terrain_rans.yaml  4_terrain_les.yaml  5_terrain_noprecursor_rans.yaml  6_terrain_noprecursor_les.yaml  7_terrain_noprecursor_rans_multidir.yaml  8_terrain_noprecursor_rans_multidir_20deg.yaml  99_fringe_test.yaml  9_wfip2_noprecursor_rans_notiffdownload.yaml
