[project]
name = "amr-terrain"
version = "3.1"
description = "AMR-Wind input file generator for running cases with terrain"
readme = "README.md"
authors = [{ name = "Harish Gopalan", email = "harish.gopalan@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "elevation>=1.1.3",
    "joblib>=1.4.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "numpy-stl>=3.2.0",
    "pyvista[io]>=0.45.0",
    "pyyaml>=6.0.2",
    "rasterio>=1.4.3",
    "scipy>=1.15.2",
    "utm>=0.8.1",
    "xarray[io]>=2025.3.1",
]

[project.optional-dependencies]
all = ["amr-terrain[srtm,particles]"]
srtm = ["elevation>=1.1.3"]
particles = ["pandas[performance]>=2,<3"]

[dependency-groups]
dev = [
    "geopandas[all]>=1.0.1",
    "ipykernel>=6.29.5",
    "pip>=25.1",
    "pyvista[all]>=0.45.0",
    "xarray[complete]>=2025.3.1",
]


[project.scripts]
amrTerrain = "amr_terrain.cli:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.uv.sources]
vtk = { index = "vtk" }

[[tool.uv.index]]
name = "vtk"
url = "https://wheels.vtk.org/"
